kubernetes-manifests/minio-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.service.expose: opendata.citygo.es,console.opendata.citygo.es
    kompose.service.expose.ingress-class-name: traefik
    kompose.service.expose.tls-secret: opendata-tls-secret
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: minio-server
  name: minio-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.service.expose: opendata.citygo.es,console.opendata.citygo.es
        kompose.service.expose.ingress-class-name: traefik
        kompose.service.expose.tls-secret: opendata-tls-secret
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/opendata-default: "true"
        io.kompose.service: minio-server
    spec:
      containers:
        - args:
            - server
            - --console-address
            - :9001
            - /data
          image: minio/minio:RELEASE.2023-11-20T22-40-07Z
          name: minio-server
          ports:
            - containerPort: 9000
              protocol: TCP
            - containerPort: 9001
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: minio-storage
      restartPolicy: Always
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-storage
status: {}
